--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ django-browser-reload==1.18.0
 django-cleanup==9.0.0
 django-htmx==1.23.2
 pillow==11.3.0
+django-tenants
+django-colorfield
+psycopg2-binary
